assignment2/src/main/d96/parser/.antlr/D96Parser.py
# Generated from e:\Nam3online\Ki212\PPL\Asgment\Asg2Test\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Foreach'", "'Int'", 
                     "'Null'", "'Constructor'", "'Continue'", "'True'", 
                     "'Float'", "'Class'", "'Destructor'", "'If'", "'False'", 
                     "'Boolean'", "'Val'", "'New'", "'Elseif'", "'Array'", 
                     "'String'", "'Var'", "'By'", "'Else'", "'In'", "'Return'", 
                     "'Self'", "'+'", "'!'", "'!='", "'==.'", "'-'", "'&&'", 
                     "'<'", "'+.'", "'*'", "'||'", "'<='", "'/'", "'=='", 
                     "'>'", "'::'", "'%'", "'='", "'>='", "'['", "']'", 
                     "'{'", "'}'", "'('", "')'", "';'", "'.'", "','", "':'", 
                     "'..'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_CMT", "BREAK", "FOREACH", "INT", 
                      "NULL", "CONSTRUCTOR", "CONTINUE", "TRUE", "FLOAT", 
                      "CLASS", "DESTRUCTOR", "IF", "FALSE", "BOOLEAN", "VAL", 
                      "NEW", "ELSEIF", "ARRAY", "STRING", "VAR", "BY", "ELSE", 
                      "IN", "RETURN", "SELF", "ADD", "NOT", "NOT_EQUAL", 
                      "EQUALDOT", "SUB", "AND", "LT", "ADDDOT", "MUL", "OR", 
                      "LE", "DIV", "EQUAL", "GT", "SC", "MOD", "ASSIGN", 
                      "GE", "LSB", "RSB", "LB", "RB", "LP", "RP", "SM", 
                      "DOT", "CM", "Extended", "FROMTO", "INTERGER_GT_ZERO", 
                      "INTEGER", "FLOAT_NUMBER", "BOOLEAN_LITERAL", "UNCLOSE_STRING", 
                      "STRING_LITERAL", "ID", "DOLLARID", "WS", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declares = 1
    RULE_class_declare = 2
    RULE_member_decl = 3
    RULE_memberlist = 4
    RULE_members = 5
    RULE_member = 6
    RULE_att_declare = 7
    RULE_att_declarelist = 8
    RULE_att_names = 9
    RULE_att_init_value = 10
    RULE_data_type = 11
    RULE_primitive_type = 12
    RULE_classtype = 13
    RULE_method_declare = 14
    RULE_func_declare = 15
    RULE_paramlist = 16
    RULE_params = 17
    RULE_param = 18
    RULE_idnamelist = 19
    RULE_blockstatment = 20
    RULE_stamentlist = 21
    RULE_staments = 22
    RULE_stament = 23
    RULE_literal = 24
    RULE_index_array_literal = 25
    RULE_multi_array = 26
    RULE_arraylist = 27
    RULE_array_type = 28
    RULE_vardecl_stm = 29
    RULE_varlist = 30
    RULE_variable_names = 31
    RULE_variable_init_value = 32
    RULE_assign_stm = 33
    RULE_leftassign = 34
    RULE_scalarvar = 35
    RULE_indexed_exp = 36
    RULE_if_stm = 37
    RULE_elseif_stms = 38
    RULE_elseif_stm = 39
    RULE_else_stm = 40
    RULE_forin_stm = 41
    RULE_steploop = 42
    RULE_break_stm = 43
    RULE_continue_stm = 44
    RULE_return_stm = 45
    RULE_method_invocation_stm = 46
    RULE_contructor_declare = 47
    RULE_detructor_declare = 48
    RULE_idname = 49
    RULE_index_operator = 50
    RULE_exp = 51
    RULE_exp0 = 52
    RULE_exp1 = 53
    RULE_exp2 = 54
    RULE_exp3 = 55
    RULE_exp4 = 56
    RULE_exp5 = 57
    RULE_exp6 = 58
    RULE_exp7 = 59
    RULE_exp8 = 60
    RULE_exp9 = 61
    RULE_exp10 = 62
    RULE_func_call = 63
    RULE_static_operand = 64
    RULE_static_func_call = 65
    RULE_method_invocate = 66
    RULE_object_exp = 67
    RULE_static_method_invocate = 68
    RULE_explists = 69
    RULE_explist = 70

    ruleNames =  [ "program", "class_declares", "class_declare", "member_decl", 
                   "memberlist", "members", "member", "att_declare", "att_declarelist", 
                   "att_names", "att_init_value", "data_type", "primitive_type", 
                   "classtype", "method_declare", "func_declare", "paramlist", 
                   "params", "param", "idnamelist", "blockstatment", "stamentlist", 
                   "staments", "stament", "literal", "index_array_literal", 
                   "multi_array", "arraylist", "array_type", "vardecl_stm", 
                   "varlist", "variable_names", "variable_init_value", "assign_stm", 
                   "leftassign", "scalarvar", "indexed_exp", "if_stm", "elseif_stms", 
                   "elseif_stm", "else_stm", "forin_stm", "steploop", "break_stm", 
                   "continue_stm", "return_stm", "method_invocation_stm", 
                   "contructor_declare", "detructor_declare", "idname", 
                   "index_operator", "exp", "exp0", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "exp10", 
                   "func_call", "static_operand", "static_func_call", "method_invocate", 
                   "object_exp", "static_method_invocate", "explists", "explist" ]

    EOF = Token.EOF
    BLOCK_CMT=1
    BREAK=2
    FOREACH=3
    INT=4
    NULL=5
    CONSTRUCTOR=6
    CONTINUE=7
    TRUE=8
    FLOAT=9
    CLASS=10
    DESTRUCTOR=11
    IF=12
    FALSE=13
    BOOLEAN=14
    VAL=15
    NEW=16
    ELSEIF=17
    ARRAY=18
    STRING=19
    VAR=20
    BY=21
    ELSE=22
    IN=23
    RETURN=24
    SELF=25
    ADD=26
    NOT=27
    NOT_EQUAL=28
    EQUALDOT=29
    SUB=30
    AND=31
    LT=32
    ADDDOT=33
    MUL=34
    OR=35
    LE=36
    DIV=37
    EQUAL=38
    GT=39
    SC=40
    MOD=41
    ASSIGN=42
    GE=43
    LSB=44
    RSB=45
    LB=46
    RB=47
    LP=48
    RP=49
    SM=50
    DOT=51
    CM=52
    Extended=53
    FROMTO=54
    INTERGER_GT_ZERO=55
    INTEGER=56
    FLOAT_NUMBER=57
    BOOLEAN_LITERAL=58
    UNCLOSE_STRING=59
    STRING_LITERAL=60
    ID=61
    DOLLARID=62
    WS=63
    ILLEGAL_ESCAPE=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declares(self):
            return self.getTypedRuleContext(D96Parser.Class_declaresContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.class_declares()
            self.state = 143
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declare(self):
            return self.getTypedRuleContext(D96Parser.Class_declareContext,0)


        def class_declares(self):
            return self.getTypedRuleContext(D96Parser.Class_declaresContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declares




    def class_declares(self):

        localctx = D96Parser.Class_declaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declares)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.class_declare()
                self.state = 146
                self.class_declares()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.class_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def member_decl(self):
            return self.getTypedRuleContext(D96Parser.Member_declContext,0)


        def Extended(self):
            return self.getToken(D96Parser.Extended, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(D96Parser.CLASS)
            self.state = 152
            self.match(D96Parser.ID)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.Extended:
                self.state = 153
                self.match(D96Parser.Extended)
                self.state = 154
                self.match(D96Parser.ID)


            self.state = 157
            self.member_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def memberlist(self):
            return self.getTypedRuleContext(D96Parser.MemberlistContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_member_decl




    def member_decl(self):

        localctx = D96Parser.Member_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(D96Parser.LB)
            self.state = 160
            self.memberlist()
            self.state = 161
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def members(self):
            return self.getTypedRuleContext(D96Parser.MembersContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memberlist




    def memberlist(self):

        localctx = D96Parser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_memberlist)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.VAL, D96Parser.VAR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.members()
                pass
            elif token in [D96Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def members(self):
            return self.getTypedRuleContext(D96Parser.MembersContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_members




    def members(self):

        localctx = D96Parser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_members)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.member()
                self.state = 168
                self.members()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_declare(self):
            return self.getTypedRuleContext(D96Parser.Att_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.att_declare()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.method_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_declarelist(self):
            return self.getTypedRuleContext(D96Parser.Att_declarelistContext,0)


        def SM(self):
            return self.getToken(D96Parser.SM, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_declare




    def att_declare(self):

        localctx = D96Parser.Att_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_att_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 178
            self.att_declarelist()
            self.state = 179
            self.match(D96Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_declarelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def Extended(self):
            return self.getToken(D96Parser.Extended, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def att_init_value(self):
            return self.getTypedRuleContext(D96Parser.Att_init_valueContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_att_declarelist




    def att_declarelist(self):

        localctx = D96Parser.Att_declarelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_att_declarelist)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.att_names()
                self.state = 182
                self.match(D96Parser.Extended)
                self.state = 183
                self.data_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.att_init_value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_namesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def CM(self):
            return self.getToken(D96Parser.CM, 0)

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_att_names




    def att_names(self):

        localctx = D96Parser.Att_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_att_names)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.idname()
                self.state = 189
                self.match(D96Parser.CM)
                self.state = 190
                self.att_names()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.idname()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_init_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def att_init_value(self):
            return self.getTypedRuleContext(D96Parser.Att_init_valueContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def Extended(self):
            return self.getToken(D96Parser.Extended, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_init_value




    def att_init_value(self):

        localctx = D96Parser.Att_init_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_att_init_value)
        try:
            self.state = 207
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.idname()
                self.state = 196
                self.match(D96Parser.CM)
                self.state = 197
                self.att_init_value()
                self.state = 198
                self.match(D96Parser.CM)
                self.state = 199
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.idname()
                self.state = 202
                self.match(D96Parser.Extended)
                self.state = 203
                self.data_type()
                self.state = 204
                self.match(D96Parser.ASSIGN)
                self.state = 205
                self.exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def classtype(self):
            return self.getTypedRuleContext(D96Parser.ClasstypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_data_type




    def data_type(self):
